# Structured-commenting-formatter

./: .gitignore  Cargo.toml  FAQ.md  README.md  rustfmt.toml
src/: lib.rs  main.rs
test_resources/: 10_answer.rs  10_test.rs  11_answer.rs  11_test.rs  12_answer.rs  1_answer.rs  1_test.rs  2_answer.rs  2_test.rs  3_answer.rs  3_test.rs  4_test.rs  5_test.rs  6_test.rs  7_test.rs  8_test.rs  9_answer.rs  9_test.rs
