[package]
name = "scfmt"
version = "0.1.2"
edition = "2021"
description = "A tool for formatting code with structured comments"
license = "MIT"
repository = "https://github.com/sloganking/Structured-commenting-formatter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
colored = "2.0.0"
phf = { version = "0.10.1", features = ["macros"] }